# docs/api/swagger.json
@@ -2355,6 +2355,9 @@
                 },
                 "supportRequestUrl": {
                     "type": "string"
+                },
+                "uploadsEnabled": {
+                    "type": "boolean"
                 }
             }
         },
@@ -3225,6 +3228,9 @@
                 },
                 "projectName": {
                     "type": "string"
+                },
+                "uploads": {
+                    "$ref": "#/definitions/UploadSettings"
                 }
             }
         },
@@ -3251,6 +3257,23 @@
                     "type": "boolean"
                 },
                 "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "UploadSettings": {
+            "type": "object",
+            "properties": {
+                "backend": {
+                    "type": "string"
+                },
+                "enabled": {
+                    "type": "boolean"
+                },
+                "gcsBucket": {
+                    "type": "string"
+                },
+                "lastError": {
                     "type": "string"
                 }
             }
@@ -3708,6 +3731,9 @@
                 },
                 "projectName": {
                     "type": "string"
+                },
+                "uploads": {
+                    "$ref": "#/definitions/consoleUpdateUploadsSettings"
                 }
             }
         },
@@ -3718,6 +3744,20 @@
                     "type": "boolean"
                 },
                 "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "consoleUpdateUploadsSettings": {
+            "type": "object",
+            "properties": {
+                "backend": {
+                    "type": "string"
+                },
+                "enabled": {
+                    "type": "boolean"
+                },
+                "gcsBucket": {
                     "type": "string"
                 }
             }
